# RoverMaster-ROS2

./: .gitignore  .gitmodules  Makefile  README.md  detections.json  environment.yml  ld.env.sh  nodes.list  python.env.sh
assets/: EuRoC.yaml  RoverMaster.yaml  TestDevice.yaml  mono_inertial.yaml
config/: slam.rviz  slam.yaml  slam_localization.yaml  slam_mapping.yaml
launch/: hh01.xml  lidar.py  mission.py  mission_left.xml  mission_right.xml  perception.py  playback.py  playback.xml  rover.py  rover.xml  slam.py  slam.xml
res/: camera_mtx.npy  distortion.npy
scripts/: bashrc.sh  clear-env.sh  compile_commands.py  compiledb.py  conda-env.sh  conda_env.py  create.sh  debug.sh  package_name.py  ros-env.sh  run.sh  run_node.sh  shell.sh
scripts/runtime-bin/: encode-video  filter-entries  flag-all  pgm2png  png2pgm  render-wizard  socat  unflag-all
src/: slam_toolbox
src/camera_detection/: package.xml  requirements.txt  setup.cfg  setup.py
src/camera_detection/camera_detection/: operation.py  perception.py  socket.py  stream.py  test.py
src/hh01/: CMakeLists.txt  package.xml
src/hh01/src/: main.cpp  subscriber.cpp
src/hh02/: test.py  tests_partA.py  tests_partB.py  tests_partC.py
src/hh02/libs_hh2/: PUMA.py  Transforms.py  utils.py
src/mission/: package.xml  setup.cfg  setup.py
src/mission/mission/: control.py  io.py  main.py  model.py  requirements.txt  robot.py  transforms.py  utils.py
src/mission/mission/actions/: detection.py  harvest.py
src/mission/mission/arm/: __init__.py  arm.py  util.py
src/mission/mission/kinematics/: __init__.py  backward.py  forward.py  util.py
src/playback/: package.xml  setup.cfg  setup.py
src/playback/playback/: player.py  recorder.py
src/rover/: CMakeLists.txt  package.xml
src/rover/include/: BaseDriver.h  Message.h  Types.h
src/rover/lib/MultiWii/: MultiWii.cpp  MultiWii.h  protocol.cpp  protocol.h
src/rover/lib/serial/: serial.cpp  serial.h
src/rover/lib/util/: assert.h  time.h
src/rover/nodes/: base.cpp
src/rover/src/: BaseDriver.cpp
src/rover_driver/: CMakeLists.txt  README.md  package.xml
src/rover_driver/lib/MultiWii/: MultiWii.cpp  MultiWii.h  protocol.h
src/rover_driver/lib/serial/: serial.cpp  serial.h
src/rover_driver/lib/threading/: exception.h  fast_io.h  fifo.h  sync.h
src/rover_driver/lib/util/: clamp.h  fmt.h
src/rover_driver/src/: base.cpp  platform.cpp
src/socket_agent/: package.xml  setup.cfg  setup.py
src/socket_agent/socket_agent/: agent.py  socket.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/tutorial_interfaces/src/: add_three_ints_client.cpp  add_three_ints_server.cpp
src/vision/: package.xml  setup.py
src/vision/vision/: calibrate.py  detector.py
src/vision/vision/lib/: ArUco.py  env.py  estimate.py
